@@ -1,3 +1,8 @@
+** v3.14, 04.12.2017**
+* Remove detached portrait feature. Let it be Benik's baby <3
+* Color the mail label in the notifications.
+* Fix WeakAura skin.
+
 ** v3.13, 03.12.2017**
 * Add a "EasyChat" function, which allows you to press tab and select a channel.
 * Account for changes with ElvUI (settings for combat indicator)
